--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -127,7 +129,7 @@
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Virtual World\IndicatorSetUp.cs" />
     <Compile Include="Assets\My Files\Scripts\Center\HandleVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\My Files\Scripts\OptiTrack\OptitrackManager.cs" />
+    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack_1\OptitrackManager.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyKnees.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\Listener\MyUdpListenerAvr.cs" />
     <Compile Include="Assets\My Files\Scripts\Z_Outros\Listener\MyUdpListenerColicoes.cs" />
