--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -107,7 +109,7 @@
     <Compile Include="Assets\My Files\Plugins\Helpers\Math\RandomHelper.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\ObterStringValues.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\StringHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Save\Data\SaveAvr.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\SaveAvr.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveColicoes.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveLog.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveRecord.cs" />
@@ -118,8 +120,8 @@
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CenterServer.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CreateAndControlVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\ReadMatrix.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\SafeCenter.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\WriteMatrix.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\SafeCenter.cs" />
+    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\WriteMatrix.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Listen\ListenBase.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\OptiTrack\DirectMulticastSocketClient.cs" />
     <Compile Include="Assets\My Files\Plugins\Z_Outros\Play\EmulateSaveData.cs" />
