--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -85,15 +83,15 @@
   <ItemGroup>
     <Compile Include="Assets\Common\Plugins\AdaptiveDoubleExponentialFilterFloat.cs" />
     <Compile Include="Assets\Common\Plugins\AdaptiveDoubleExponentialFilterVector3.cs" />
+    <Compile Include="Assets\Common\Plugins\AvatarMessage.cs" />
+    <Compile Include="Assets\Common\Plugins\BodiesMessage.cs" />
+    <Compile Include="Assets\Common\Plugins\CloudMessage.cs" />
     <Compile Include="Assets\Common\Plugins\CommonUtils.cs" />
     <Compile Include="Assets\Common\Plugins\ConfigProperties.cs" />
     <Compile Include="Assets\Common\Plugins\KalmanFilterFloat.cs" />
     <Compile Include="Assets\Common\Plugins\KalmanFilterVector3.cs" />
     <Compile Include="Assets\Common\Plugins\UdpBroadcast.cs" />
-    <Compile Include="Assets\Common\Plugins\AvatarMessage.cs" />
-    <Compile Include="Assets\Common\Plugins\BodiesMessage.cs" />
     <Compile Include="Assets\Common\Scripts\CameraOrbit.cs" />
-    <Compile Include="Assets\Common\Plugins\CloudMessage.cs" />
     <Compile Include="Assets\Common\Scripts\DoNotify.cs" />
     <Compile Include="Assets\Common\Scripts\GridOverlay.cs" />
     <Compile Include="Assets\Common\Scripts\Logger.cs" />
@@ -109,7 +107,6 @@
     <Compile Include="Assets\My Files\Plugins\Helpers\Math\RandomHelper.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\ObterStringValues.cs" />
     <Compile Include="Assets\My Files\Plugins\Helpers\StringHelper.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\SaveAvr.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveColicoes.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveLog.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveRecord.cs" />
@@ -117,28 +114,8 @@
     <Compile Include="Assets\My Files\Plugins\Save\Info\SafeWriteFile.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SaveCenter.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SaveCenterToSend.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CenterServer.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\CreateAndControlVirtualWorld.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Geral\ReadMatrix.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\SafeCenter.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Save Data\WriteMatrix.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Listen\ListenBase.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\OptiTrack\DirectMulticastSocketClient.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Play\EmulateSaveData.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Set Up\EmulateSaveDataSetUp.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Virtual World\Indicator.cs" />
-    <Compile Include="Assets\My Files\Plugins\Z_Outros\Virtual World\IndicatorSetUp.cs" />
     <Compile Include="Assets\My Files\Scripts\Center\HandleVirtualWorld.cs" />
     <Compile Include="Assets\My Files\Scripts\Listener\MyUdpListener.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\Geral\MyKnees.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\Listener\MyUdpListenerAvr.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\Listener\MyUdpListenerColicoes.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\Listener\MyUdpListenerRecord.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ApplyTransformation.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\ObjectTracker.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiDrawScript.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptiObjects.cs" />
-    <Compile Include="Assets\My Files\Scripts\Z_Outros\OptiTrack\OptitrackManager.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Human.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\Sensor.cs" />
     <Compile Include="Assets\Trackerhub\Plugins\SensorBody.cs" />
@@ -147,6 +124,27 @@
     <Compile Include="Assets\Trackerhub\Scripts\Tracker.cs" />
     <Compile Include="Assets\Trackerhub\Scripts\TrackerProperties.cs" />
     <Compile Include="Assets\Trackerhub\Scripts\TrackerUI.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Geral\CenterServer.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Geral\CreateAndControlVirtualWorld.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Geral\ReadMatrix.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Listen\ListenBase.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\OptiTrack\DirectMulticastSocketClient.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Play\EmulateSaveData.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Save Data\SafeCenter.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Save Data\SaveAvr.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Save Data\WriteMatrix.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Set Up\EmulateSaveDataSetUp.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Virtual World\Indicator.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Virtual World\IndicatorSetUp.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\Geral\MyKnees.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\Listener\MyUdpListenerAvr.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\Listener\MyUdpListenerColicoes.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\Listener\MyUdpListenerRecord.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\OptiTrack\ApplyTransformation.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\OptiTrack\ObjectTracker.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\OptiTrack\OptiDrawScript.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\OptiTrack\OptiObjects.cs" />
+    <Compile Include="Assets\Z_Outros\Scripts\OptiTrack\OptitrackManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Common\Models\Shaders\Skybox-Procedural.shader" />
@@ -161,7 +159,6 @@
     <None Include="Assets\configSettings.txt" />
     <None Include="Assets\simpleBillboard.shader" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
