--- a/creepytracker.csproj
+++ b/creepytracker.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.2f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -109,8 +111,8 @@
     <Compile Include="Assets\My Files\Plugins\Helpers\StringHelper.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveColicoes.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Data\SaveLog.cs" />
-    <Compile Include="Assets\My Files\Plugins\Save\Data\SaveRecord.cs" />
-    <Compile Include="Assets\My Files\Plugins\Save\Data\SaveStatus.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Save Data\SaveRecord.cs" />
+    <Compile Include="Assets\Z_Outros\Plugins\Save Data\SaveStatus.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SafeWriteFile.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SaveCenter.cs" />
     <Compile Include="Assets\My Files\Plugins\Save\Info\SaveCenterToSend.cs" />
