--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
+#
 *.bin
 *.exe
+*.sln
 Temp/
 Library/
 bin/
-*.sln
+
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Visual Studio 2015 cache/options directory
+.vs/
