--- a/creepytracker.Plugins.csproj
+++ b/creepytracker.Plugins.csproj
@@ -202,8 +202,8 @@
   <ItemGroup>
     <None Include="Assets\Common\Models\Shaders\Skybox-Procedural.shader" />
     <None Include="Assets\Common\Shaders\Grid.shader" />
-    <None Include="Assets\My Files\Shaders\Outlined-Silhouette Only.shader" />
-    <None Include="Assets\My Files\Shaders\Silhouetted Diffuse.shader" />
+    <None Include="Assets\My Files - FHV\Shaders\Outlined-Silhouette Only.shader" />
+    <None Include="Assets\My Files - FHV\Shaders\Silhouetted Diffuse.shader" />
     <None Include="Assets\Shaders\GS Billboard.shader" />
     <None Include="Assets\Shaders\VertexColor.shader" />
     <None Include="Assets\Shaders\simpleBillboard.shader" />
